# Hydride

./: AGENTS.md  Cargo.toml  README.md  config.example.toml
migrations/: 0001_initial.sql  0002_add_case_message_id.sql
src/: app.rs  error.rs  main.rs  state.rs  util.rs
src/bot/: events.rs  framework.rs  mod.rs
src/commands/: cases.rs  config.rs  meta.rs  mod.rs  moderation.rs
src/config/: file.rs  mod.rs  runtime.rs
src/db/: mod.rs  models.rs  pool.rs  repository.rs
src/domain/: actions.rs  logging.rs  mod.rs  permissions.rs
