[package]
name = "moderation_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
poise = "0.6"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "framework", "gateway", "model", "rustls_backend", "utils"] }
snafu = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
